Thin hairline gap displayed for subpixel sized inset box-shadows https://bugs.webkit.org/show_bug.cgi?id=230814

Reviewed by Simon Fraser.

Source/WebCore:

Add missing device pixel snapping for inset offset.

Test: fast/box-shadow/hidpi-box-shadow-inset-on-subpixel-position.html

* rendering/RenderBoxModelObject.cpp:
(WebCore::RenderBoxModelObject::paintBoxShadow):

LayoutTests:

* fast/box-shadow/hidpi-box-shadow-inset-on-subpixel-position-expected.html: Added.
* fast/box-shadow/hidpi-box-shadow-inset-on-subpixel-position.html: Added.
* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/242287@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@283258 268f45cc-cd09-0410-ab3c-d52691b4dbfc